# Lima-camera-v4l2

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md
cmake/: FindV4L2.cmake
conda/camera/: conda_build_config.yaml  meta.yaml
conda/tango/: meta.yaml
doc/: index.rst  tango.rst
include/: V4L2Camera.h  V4L2DetInfoCtrlObj.h  V4L2Interface.h  V4L2SyncCtrlObj.h  V4L2VideoCtrlObj.h
python/: __init__.py
sip/: TutorialCamera.sip  TutorialInterface.sip  V4l2Camera.sip  V4l2Interface.sip
src/: Makefile  V4L2Camera.cpp  V4L2DetInfoCtrlObj.cpp  V4L2Interface.cpp  V4L2SyncCtrlObj.cpp  V4L2VideoCtrlObj.cpp
tango/: CMakeLists.txt  V4l2.py
